<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CrowdFarmActivity!</string>
    <string name="app_name">CrowdFarm</string>
    <string name="cfTitle">CrowdFarm</string>
    <string name="addProduce">Add Produce</string>
    <string name="viewProduce">View Produce</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sampleEmail">bsmith@example.com</string>
    <string name="rTitle">Registration</string>
    <string name="passwordLower">password</string>
    <string name="confirmEmail">Confirm your email</string>
    <string name="promptPassword">Enter a password</string>
    <string name="chooseAccount">Choose an account</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="firstName">First name</string>
    <string name="mi">MI</string>
    <string name="lastName">Last name</string>
    <string name="sampleFirst">Bob</string>
    <string name="sampleMiddle">R</string>
    <string name="sampleLast">Smith</string>
    <string name="promptLocation">Enter a location</string>
    <string name="getLocation">Use current location</string>
    <string name="or">OR</string>
    <string name="promptPhone">Enter a phone number</string>
    <string name="promptDescription">Describe your farm</string>
    <string name="sampleAddress">101 W Sample Rd, Example, NC 98765</string>
    <string name="samplePhone">919-808-1212</string>
    <string name="sampleDescription">Example Farms uses no pesticides while growing our produce.  Our produce is picked when ripe and always available for immediate delivery.</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="pTitle">New Produce</string>
    <string name="promptType">Enter the type of produce</string>
    <string name="promptAmount">Enter the amount</string>
    <string name="promptCost">Enter the unit cost</string>
    <string name="sampleType">Cabbage</string>
    <string name="sampleAmount">10</string>
    <string name="sampleCost">0.50</string>
    <string name="dollarSign">$</string>
    <string name="promptPickDate">Enter the date picked</string>
    <string name="promptLife">Enter the shelf life</string>
    <string name="samplePickDate">01/01/2009</string>
    <string name="sampleLife">14</string>
    <string name="lTitle">Produce List</string>
    <string name="register">Register</string>
    <string name="splashWelcome">Welcome</string>
    <string name="splashTo">to</string>
    <string-array name="quantityTypes">
        <item>bushel</item>
        <item>quart</item>
        <item>ounce</item>
        <item>pound</item>
    </string-array>
    <string-array name="shelfLifeTypes">
        <item>day</item>
        <item>week</item>
        <item>month</item>
    </string-array>
    <string name="backLogin">Back to Login</string>
    <string name="editProduce">Edit Produce</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

</resources>