<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/titleLayout02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/title02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/rTitle"
                    android:textAppearance="@style/titleText" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp"
                android:layout_marginTop="25dp"
                android:layout_weight="0.3"
                android:paddingLeft="5dp" >

                <TextView
                    android:id="@+id/firstNamePrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/firstName"
                    android:textAppearance="@style/registerText" />

                <EditText
                    android:id="@+id/firstNameInput"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/firstNamePrompt"
                    android:hint="@string/sampleFirst" />

                <TextView
                    android:id="@+id/miPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/firstNameInput"
                    android:layout_marginTop="25dp"
                    android:text="@string/mi"
                    android:textAppearance="@style/registerText" />

                <EditText
                    android:id="@+id/miInput"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/miPrompt"
                    android:hint="@string/sampleMiddle" />

                <TextView
                    android:id="@+id/lastNamePrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/miInput"
                    android:layout_marginTop="25dp"
                    android:text="@string/lastName"
                    android:textAppearance="@style/registerText" />

                <EditText
                    android:id="@+id/lastNameInput"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/lastNamePrompt"
                    android:hint="@string/sampleLast" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/back02"
            style="@style/btnText"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:onClick="back"
            android:text="@string/back" />

        <Button
            android:id="@+id/next02"
            style="@style/btnText"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="next"
            android:text="@string/next" />
    </RelativeLayout>

</RelativeLayout>